{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 34,
  "lineage": "e81dd744-720d-0462-e9fd-2a6866a5c9a6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0613c202ef193d926",
            "arn": "arn:aws:ec2:ca-central-1:054037121931:elastic-ip/eipalloc-0613c202ef193d926",
            "association_id": "eipassoc-0fa626cea9bafa07e",
            "domain": "vpc",
            "id": "eipalloc-0613c202ef193d926",
            "network_border_group": "ca-central-1",
            "network_interface": "eni-0af4ace45ca586750",
            "private_dns": "ip-12-0-0-243.ca-central-1.compute.internal",
            "private_ip": "12.0.0.243",
            "public_dns": "ec2-15-156-45-94.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.156.45.94",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "NAT EIP"
            },
            "tags_all": {
              "Name": "NAT EIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Private_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bee12a638c7a8942",
            "arn": "arn:aws:ec2:ca-central-1:054037121931:instance/i-065c29f14eb2cb0be",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-065c29f14eb2cb0be",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07ab2a66e618868f7",
            "private_dns": "ip-12-0-2-40.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.0.2.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-090a095c380b17227",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06772fc8317ffc8e6",
            "tags": {
              "Name": "private-instance"
            },
            "tags_all": {
              "Name": "private-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e55b17fbb67e2125"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_security_group",
            "aws_subnet.private_subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Public_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bee12a638c7a8942",
            "arn": "arn:aws:ec2:ca-central-1:054037121931:instance/i-03aeae0f4444fde62",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03aeae0f4444fde62",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Key_pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ca4cc60eb816372f",
            "private_dns": "ip-12-0-0-142.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "12.0.0.142",
            "public_dns": "ec2-3-96-217-127.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.217.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07a56e81aff9b289a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a4e8a5dfc6c4ec5",
            "tags": {
              "Name": "public-instance"
            },
            "tags_all": {
              "Name": "public-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e55b17fbb67e2125"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_security_group",
            "aws_subnet.public_subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:054037121931:internet-gateway/igw-035f7eeb9c6af2ac5",
            "id": "igw-035f7eeb9c6af2ac5",
            "owner_id": "054037121931",
            "tags": {
              "Name": "IGW: for public subnets"
            },
            "tags_all": {
              "Name": "IGW: for public subnets"
            },
            "vpc_id": "vpc-02ce11ff3be0c5dab"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "NAT-Gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0613c202ef193d926",
            "association_id": "eipassoc-0fa626cea9bafa07e",
            "connectivity_type": "public",
            "id": "nat-054d1f24bcd4bdd15",
            "network_interface_id": "eni-0af4ace45ca586750",
            "private_ip": "12.0.0.243",
            "public_ip": "15.156.45.94",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01a4e8a5dfc6c4ec5",
            "tags": {
              "Name": "NAT Gateway"
            },
            "tags_all": {
              "Name": "NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:054037121931:route-table/rtb-0f71793cd178b98c5",
            "id": "rtb-0f71793cd178b98c5",
            "owner_id": "054037121931",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-054d1f24bcd4bdd15",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ce11ff3be0c5dab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.NAT-Gateway",
            "aws_subnet.public_subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:054037121931:route-table/rtb-0d22f185bfea4b71a",
            "id": "rtb-0d22f185bfea4b71a",
            "owner_id": "054037121931",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-035f7eeb9c6af2ac5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable",
              "Project": "yes"
            },
            "tags_all": {
              "Name": "PublicRouteTable",
              "Project": "yes"
            },
            "timeouts": null,
            "vpc_id": "vpc-02ce11ff3be0c5dab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-083cc27fe37e094a0",
            "route_table_id": "rtb-0f71793cd178b98c5",
            "subnet_id": "subnet-06772fc8317ffc8e6"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.NAT-Gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f9ab0f0dccc806a",
            "route_table_id": "rtb-0f71793cd178b98c5",
            "subnet_id": "subnet-0aac5e69acfebfd31"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.NAT-Gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet",
            "aws_subnet.public_subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07701e27646b4edc8",
            "route_table_id": "rtb-0d22f185bfea4b71a",
            "subnet_id": "subnet-01a4e8a5dfc6c4ec5"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-028c7f4b31e790061",
            "route_table_id": "rtb-0d22f185bfea4b71a",
            "subnet_id": "subnet-0ee0d8bcbc66936dc"
          },
          "dependencies": [
            "aws_internet_gateway.public_internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:054037121931:security-group/sg-0e55b17fbb67e2125",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e55b17fbb67e2125",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241222062525232500000001",
            "name_prefix": "terraform-",
            "owner_id": "054037121931",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02ce11ff3be0c5dab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:054037121931:subnet/subnet-06772fc8317ffc8e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "12.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06772fc8317ffc8e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037121931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-1"
            },
            "tags_all": {
              "Name": "PrivateSubnet-1"
            },
            "vpc_id": "vpc-02ce11ff3be0c5dab"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:054037121931:subnet/subnet-0aac5e69acfebfd31",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "12.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aac5e69acfebfd31",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037121931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet-2"
            },
            "tags_all": {
              "Name": "PrivateSubnet-2"
            },
            "vpc_id": "vpc-02ce11ff3be0c5dab"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:054037121931:subnet/subnet-01a4e8a5dfc6c4ec5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "12.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a4e8a5dfc6c4ec5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037121931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-1"
            },
            "tags_all": {
              "Name": "PublicSubnet-1"
            },
            "vpc_id": "vpc-02ce11ff3be0c5dab"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:054037121931:subnet/subnet-0ee0d8bcbc66936dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "12.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee0d8bcbc66936dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "054037121931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet-2"
            },
            "tags_all": {
              "Name": "PublicSubnet-2"
            },
            "vpc_id": "vpc-02ce11ff3be0c5dab"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:054037121931:vpc/vpc-02ce11ff3be0c5dab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "12.0.0.0/16",
            "default_network_acl_id": "acl-0dd9430468362bf2e",
            "default_route_table_id": "rtb-0b9eaaa540be655e3",
            "default_security_group_id": "sg-07335473f77f51f0e",
            "dhcp_options_id": "dopt-032e8f80f65c2e7a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02ce11ff3be0c5dab",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b9eaaa540be655e3",
            "owner_id": "054037121931",
            "tags": {
              "Name": "VPC",
              "Project": "yes"
            },
            "tags_all": {
              "Name": "VPC",
              "Project": "yes"
            }
          }
        }
      ]
    }
  ]
}